--- a/about.html
+++ b/about.html
@@ -25,15 +25,16 @@
         <div class="about_container">
             <img class="pb" src="images/gurohandeland_sun.png"/>
             <div>
-                <blockquote class="about_text"> Guro, 25 y/o. Always on the look for the reflection of the sun. Know how to code and how to
-                find solutions. Have a deep passion for coffee, collages and hikes. And doodling.</blockquote>
-                <blockquote class="about_text">I have a bachelor degree from University of Oslo. <a href="https://www.uio.no/studier/program/inf-design/" target="_blank">This one</a>. Here, I studied interaction design and did my equivalient to a minor in social anthropology. In social anthropology, I took classes that emphasised our global troubles (Overheating & the linear idea of development). My field of interest is Sustainable Design, and I find the Transition Design Methodology very intriguing. 
-                <br>I did <a href="Handeland&Skjeie(2021).pdf" target="_blank">a research study</a> during my bachelor, on a Community of Practice on a online help desk for the users of our worlds biggest free and open source health information software (<a href="https://dhis2.org/" target="_blank">Dhis2</a>). Phew. I also travelled to Malawi with the same group of researchers in January 2023.</blockquote>
-                <blockquote class="about_text">Since August 2021 I have been living my life as a cafemanager <article style="font-style: italic; font-size: inherit;">(includes doing some graphical design, drawing classes, one musical performance, event management and hiring)</article> at <a href="https://www.trevarefabrikken.no/" target="_blank">Trevarefabrikken in Henningsvær, Lofoten</a>. This is also where you find me atm.</blockquote>
-                <blockquote class="about_text">I will be living in my VW Transporter (T5) from 05.2023.</blockquote>
-                <blockquote class="about_text">Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></blockquote>
+                <p class="about_text"> Guro, 26 y/o. Always on the look for the reflection of the sun. Know how to code and how to
+                find solutions. Have a deep passion for coffee, collages and hikes. And doodling.</p>
+                <p class="about_text">I have a bachelor degree from University of Oslo. <a href="https://www.uio.no/studier/program/inf-design/" target="_blank">This one</a>. Here, I studied interaction design and did my equivalient to a minor in social anthropology. In social anthropology, I took classes that emphasised our global troubles (Overheating & the linear idea of development). My field of interest is Sustainable Design, and I find the Transition Design Methodology very intriguing. 
+                <br>I did <a href="Handeland&Skjeie(2021).pdf" target="_blank">a research study</a> during my bachelor, on a Community of Practice on a online help desk for the users of our worlds biggest free and open source health information software (<a href="https://dhis2.org/" target="_blank">Dhis2</a>). Phew. I also travelled to Malawi with the same group of researchers in January 2023.</p>
+                <p class="about_text">Since August 2021 I have been living my life as a cafemanager <i style="font-style: italic; font-size: inherit;">(includes doing some graphical design, drawing classes, one musical performance, event management and hiring)</i> at <a href="https://www.trevarefabrikken.no/" target="_blank">Trevarefabrikken in Henningsvær, Lofoten</a>. This is also where you find me Spring 2023.</p>
+                <br><br>
+                <p class="about_text">I will be living in my VW Transporter (T5) from 05.2023. Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></p>
             </div>
         </div>
+        <canvas class="whitespace"></canvas>
         <footer>
             <div class="some">
                 <menu class="somemenu">
