--- a/drawings.html
+++ b/drawings.html
@@ -72,12 +72,8 @@
                         href="https://www.trevarefabrikken.no/">Trevarefabrikken</a></h3>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+    
+        <canvas class="whitespace"></canvas>
     </div>
     <footer>
         <div class="some">
