--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
     </header>
     <div>
         <div class="main_content">
-            <div class="grid">
-                <h2>This is the website of <a href="about.html">Guro Handeland</a></h2>
-                <h2>Her stuff. What she has done in different forms and ways.</h2>
-                <h2>In absolute self written (but google inspired) html css js synergy.</h2>
-                <h2>I wanted this page to be as static as possible. No extra fun stuff.</h2>
-                <h2>Have patience. I do. More will come and arrive.</h2>
-            </div>
+                <h2>This is the website of <a href="about.html">Guro Handeland</a>
+                <br>Her stuff. What she has done in different forms and ways.
+                <br>In absolute self written (but google inspired) html css js synergy.
+                <br>I wanted this page to be as static as possible. No extra fun stuff.
+                <br>Have patience. I do. More will come and arrive.</h2>
         </div>
         <div class="home_nav">
             <nav class="home_nav_list">
