--- a/photo.html
+++ b/photo.html
@@ -74,6 +74,7 @@
         </div>
         <h3>I catch light with my phone:) </h3>
     </div>
+    <canvas class="whitespace"></canvas>
 <script>
     var slideIndex = [1, 1]; //blir automatisk storre pga for-loop i initialiseSlides
     var slidesIDList = ["olympus_slides", "light_slides"]; //det er kun her du trenger a legge til navn pa nye lister
