--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,7 @@
             <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN3010/v21/prosjekter/diy/index.html ">Project third year – University of Oslo: Elan</a></li>
         </ul>
     </div>
+    <canvas class=""whitespace"></canvas>
     <footer>
         <div class="some">
             <menu class="somemenu">
