--- a/where.html
+++ b/where.html
@@ -23,9 +23,10 @@
         </div>
     </header>
     <div class="where">
-        <h2>Mitt oppholdsted</h2>
-        <h3>Oslo, Oslo</h3>
+        <h2>Oslo, Oslo |<b>||</b>| <i>21.02.2023</i></h3>
     </div>
+    <canvas class="whitespace" id="ws_where"></canvas>
+
     <footer>
         <div class="some">
             <menu class="somemenu">
