Order of about_container

--- a/drawings.html
+++ b/drawings.html
@@ -23,10 +23,8 @@
         </div>
     </header>
     <div class="grid">
-        <h2>
-            Drawings
-        </h2>
-        <div>
+        <div class="about_container">
+            <h2>Drawings</h2>
             <p>I draw when I feel overwhelmed by life. Usually I draw with a text on the side, as it helps me sort out thoughts and worries.</p>
             <br>
             <p>I run a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.</p>
@@ -78,14 +76,14 @@
     <footer>
         <div class="some">
             <menu class="somemenu">
-                <text class="about_text">Find me on</text>
+                <p class="about_text">Find me on</p>
                 <li><a href="https://www.instagram.com/gurogreier/" class="somelink" target="_blank">Instagram</a></li>
                 <li><a href="https://www.linkedin.com/in/guro-handeland-740171156/" class="somelink"
                         target="_blank">LinkedIn</a></li>
                 <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
             </menu>
         </div>
-        <small>copyright © Guro Handeland</small>
+        <small id="copyright">copyright © Guro Handeland</small>
     </footer>
 
     <script>
