--- a/photo.html
+++ b/photo.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <div class="grid">
+    <div class="about_container">
         <h2>
             Photo
         </h2>
