--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <div class="grid">
+    <div class="about_container">
         <h2>
             Projects
         </h2>
@@ -44,7 +44,7 @@
                 <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
             </menu>
         </div>
-        <small>copyright © Guro Handeland</small>
+        <small id="copyright">copyright © Guro Handeland</small>
     </footer>
 </body>
 
