--- a/where.html
+++ b/where.html
@@ -37,7 +37,7 @@
                 <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
             </menu>
         </div>
-        <small>copyright © Guro Handeland</small>
+        <small id="copyright">copyright © Guro Handeland</small>
     </footer>
 </body>
 
