Responsive columns in About

--- a/drawings.html
+++ b/drawings.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <div class="grid">
-        <div class="about_container">
+        <div>
             <h2>Drawings</h2>
             <p>I draw when I feel overwhelmed by life. Usually I draw with a text on the side, as it helps me sort out thoughts and worries.</p>
             <br>
