--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!--Set the viewport in order to make the site responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All the light caught</title>
+    <title>All the periods caught</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -22,12 +22,10 @@
             </nav>
         </div>
     </header>
-    <div class="about_container">
+    <div class="grid">
         <h2>
             Projects
         </h2>
-    </div>
-    <div class="projects_list_container">
         <ul class="projects_list">
             <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN1060/v19/prosjekt-2019/hvass/">Project first year – University of Oslo: HVASS</a></li>
             <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN3010/v21/prosjekter/diy/index.html ">Project third year – University of Oslo: Elan</a></li>
@@ -44,7 +42,7 @@
                 <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
             </menu>
         </div>
-        <small id="copyright">copyright © Guro Handeland</small>
+        <!--<small id="copyright">copyright © Guro Handeland</small>-->
     </footer>
 </body>
 
