--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
             <!--Set the viewport in order to make the site responsive-->
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Guro Handeland - About</title>
+        <title>Me - Guro Handeland</title>
         <link rel="stylesheet" href="styles.css"></link>
         <script src="slideshow.js"></script>
         <script src="header.js"></script>
@@ -22,16 +22,22 @@
                 </nav>
             </div>
         </header>
-        <div class="about_container">
-            <img class="pb" src="images/gurohandeland_sun.png"/>
-            <div>
-                <p class="about_text"> Guro, 26 y/o. Always on the look for the reflection of the sun. Know how to code and how to
-                find solutions. Have a deep passion for coffee, collages and hikes. And doodling.</p>
-                <p class="about_text">I have a bachelor degree from University of Oslo. <a href="https://www.uio.no/studier/program/inf-design/" target="_blank">This one</a>. Here, I studied interaction design and did my equivalient to a minor in social anthropology. In social anthropology, I took classes that emphasised our global troubles (Overheating & the linear idea of development). My field of interest is Sustainable Design, and I find the Transition Design Methodology very intriguing. 
-                <br>I did <a href="Handeland&Skjeie(2021).pdf" target="_blank">a research study</a> during my bachelor, on a Community of Practice on a online help desk for the users of our worlds biggest free and open source health information software (<a href="https://dhis2.org/" target="_blank">Dhis2</a>). Phew. I also travelled to Malawi with the same group of researchers in January 2023.</p>
-                <p class="about_text">Since August 2021 I have been living my life as a cafemanager <i style="font-style: italic; font-size: inherit;">(includes doing some graphical design, drawing classes, one musical performance, event management and hiring)</i> at <a href="https://www.trevarefabrikken.no/" target="_blank">Trevarefabrikken in Henningsvær, Lofoten</a>. This is also where you find me Spring 2023.</p>
-                <br><br>
-                <p class="about_text">I will be living in my VW Transporter (T5) from 05.2023. Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></p>
+        <div class="grid">
+            <div class="about_container" id="about_row">
+
+                <div class="about_column_1">
+                    <img class="pb" src="images/gurohandeland_sun.png"/>
+                </div>
+
+                <div class="about_column_2">
+                    <p class="about_text"> Guro, 26 y/o. Always on the look for the reflection of the sun. Know how to code and how to
+                    find solutions. Have a deep passion for coffee, collages and hikes. And doodling.</p>
+                    <p class="about_text">I have a bachelor degree from University of Oslo. <a href="https://www.uio.no/studier/program/inf-design/" target="_blank">This one</a>. Here, I studied interaction design and did my equivalient to a minor in social anthropology. In social anthropology, I took classes that emphasised our global troubles (Overheating & the linear idea of development). My field of interest is Sustainable Design, and I find the Transition Design Methodology very intriguing. 
+                    <br>I did <a href="Handeland&Skjeie(2021).pdf" target="_blank">a research study</a> during my bachelor, on a Community of Practice on a online help desk for the users of our worlds biggest free and open source health information software (<a href="https://dhis2.org/" target="_blank">Dhis2</a>). Phew. I also travelled to Malawi with the same group of researchers in January 2023.</p>
+                    <p class="about_text">Since August 2021 I have been living my life as a cafemanager <i style="font-style: italic; font-size: inherit;"> – included doing some graphical design, drawing classes, one musical performance, event management and hiring – </i> at <a href="https://www.trevarefabrikken.no/" target="_blank">Trevarefabrikken in Henningsvær, Lofoten</a>. This is also where you find me Spring 2023.</p>
+                    <br><br>
+                    <p class="about_text">I will be living in my VW Transporter (T5) from 05.2023. Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></p>
+                </div>
             </div>
         </div>
         <canvas class="whitespace"></canvas>
