New position Prev/next + hr line

--- a/drawings.html
+++ b/drawings.html
@@ -25,10 +25,8 @@
     <div class="grid">
         <div>
             <h2>Drawings</h2>
-            <p>I draw when I feel overwhelmed by life. Usually I draw with a text on the side, as it helps me sort out thoughts and worries.</p>
-            <br>
+            <p>I draw when I feel overwhelmed by life. Usually I write a text on the side, as it helps me sort out thoughts and worries.</p>
             <p>I run a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.</p>
-            <br>
             <p>I have also found drawing useful in my work as a cafemanager.</p>
         </div>
         <br>
@@ -62,15 +60,18 @@
                     <div class="numbertext">6/6</div>
                     <img class="slide_img" src="images/foodsigns/fsdrawn6.jpeg" />
                 </div>
-            </div>
+
                 <!-- &#10094/94 er piler :) -->
-                <h3><a class="prev" onclick="plusSlides(-1, 0)">Previous</a></h3>
-                <h3><a class="next" onclick="plusSlides(1, 0)">Next</a></h3>
+                    <h3><a class="prev" onclick="plusSlides(-1, 0)">Previous</a></h3>
+                    <h3><a class="next" onclick="plusSlides(1, 0)">Next</a></h3>
+                </div>
                 <h3>These drawings I did on my mousepad. The goal was to draw attention to the drinks we sold at <a
                         href="https://www.trevarefabrikken.no/">Trevarefabrikken</a></h3>
             </div>
         </div>
-    
+                <hr class="little_whitespace" id="ws_photo">
+                </hr>
+
         <canvas class="whitespace"></canvas>
     </div>
     <footer>
