--- a/photo.html
+++ b/photo.html
@@ -47,7 +47,7 @@
             <h3><a class="next" onclick="plusSlides(1, 0)">Next</a></h3>
             <h3>A few years back I bought an Olympus XA2 camera at a second hand store. <br>These are some of my favourites.</h3>
         </div>
-
+        <hr class="little_whitespace" id="ws_photo"></hr>
         <div class="img_slideshow_container">
             <h3>Light</h3>
             <div id="slideshow2"> 
