--- a/photo.html
+++ b/photo.html
@@ -45,7 +45,7 @@
             <!-- &#10094/95 er piler :) -->
             <h3><a class="prev" onclick="plusSlides(-1, 0)">Previous</a></h3>
             <h3><a class="next" onclick="plusSlides(1, 0)">Next</a></h3>
-            <h3>A few years back I bought an Olympus XA2 camera at a second hand store. <br>These are some of my favourites.</h3>
+            <h4>A few years back I bought an Olympus XA2 camera at a second hand store. <br>These are some of my favourites.</h4>
         </div>
         <hr class="little_whitespace" id="ws_photo"></hr>
         <div class="img_slideshow_container">
@@ -71,7 +71,7 @@
                 <h3><a class="prev" onclick="plusSlides(-1, 1)">Previous</a></h3>
                 <h3><a class="next" onclick="plusSlides(1, 1)">Next</a></h3>
             </div>
-            <h3>I catch light with my phone:) </h3>
+            <h4>I catch light with my iphone12mini </h4>
         </div>
     </div>
     <canvas class="whitespace"></canvas>
