--- a/drawings.html
+++ b/drawings.html
@@ -89,7 +89,7 @@
                     <img class="slide_img" src="images/i&e/digital.jpeg" />
                 </div>
     
-                <!-- &#10094/94 er piler :) -->
+                <!-- &#10094/94 er piler :) Husk at plusSlides ma oke no pa neste ss kall-->
                 <h3><a class="prev" onclick="plusSlides(-1, 1)">Previous</a></h3>
                 <h3><a class="next" onclick="plusSlides(1, 1)">Next</a></h3>
             </div>
