--- a/photo.html
+++ b/photo.html
@@ -26,6 +26,9 @@
         <h2>
             Photo
         </h2>
+            <p>I take photos for inspiration. And for the memories.</p>
+        </div>
+
         <div class="img_slideshow_container">
             <h3>Olympus</h3>
             <div id="slideshow1">
@@ -46,6 +49,7 @@
             <h3><a class="prev" onclick="plusSlides(-1, 0)">Previous</a></h3>
             <h3><a class="next" onclick="plusSlides(1, 0)">Next</a></h3>
             <h4>A few years back I bought an Olympus XA2 camera at a second hand store. <br>These are some of my favourites.</h4>
+            <small><i>2022</i></small>
         </div>
         <hr class="little_whitespace" id="ws_photo"></hr>
         <div class="img_slideshow_container">
@@ -72,6 +76,7 @@
                 <h3><a class="next" onclick="plusSlides(1, 1)">Next</a></h3>
             </div>
             <h4>I catch light with my iphone12mini </h4>
+            <small><i>2021 – 2022</i></small>
         </div>
     </div>
     <canvas class="whitespace"></canvas>
