New Folder Structure

--- a/drawings.html
+++ b/drawings.html
@@ -5,8 +5,8 @@
     <!--Set the viewport in order to make the site responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All the lines caught</title>
-    <script src="slideshow.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="js/slideshow.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
