--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!--Set the viewport in order to make the site responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Guro Handeland - Home</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="home.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/home.js"></script>
 </head>
 <body>
     <header class="my_header">
