--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <!--Set the viewport in order to make the site responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All the periods caught</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
