--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,11 @@
         </h2>
         <ul class="projects_list">
             <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN1060/v19/prosjekt-2019/hvass/">Project first year – University of Oslo: HVASS</a></li>
+            <li class="projects_li_item"><a href=""
             <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN3010/v21/prosjekter/diy/index.html ">Project third year – University of Oslo: Elan</a></li>
+            <li class="projects_li_item"><a href="https://www.ceciliehaaland.no/">Website of ceramic artist Cecilie Haaland</a><li>
+            <li class="projects_li_item"><a href="https://tringabirding.no/">Website of birding guide and photographer John Stenersen</a><li>    
+
         </ul>
     </div>
     <canvas class=""whitespace"></canvas>
