--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,7 @@
             <li class="projects_li_item"><a href=""
             <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN3010/v21/prosjekter/diy/index.html ">Project third year – University of Oslo: Elan</a></li>
             <li class="projects_li_item"><a href="https://www.ceciliehaaland.no/">Website of ceramic artist Cecilie Haaland</a><li>
-            <li class="projects_li_item"><a href="https://tringabirding.no/">Website of birding guide and photographer John Stenersen</a><li>    
-
+            <li class="projects_li_item"><a href="https://tringabirding.no/">Website of birding guide and photographer John Stenersen</a></li>    
         </ul>
     </div>
     <canvas class=""whitespace"></canvas>
