--- a/where.html
+++ b/where.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <div class="where">
-        <h2>Nissedal, Vestfold Telemark |<b>||</b>| <i>30.03.2023</i></h3>
+        <h2>Oslo, Oslo |<b>||</b>| <i>21.08.2023</i></h3>
     </div>
     <canvas class="whitespace" id="ws_where"></canvas>
 
