--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="my_header">
         <h1 class="nav_item"><a href="about.html">Guro Handeland</a></h1>
     </header>
-    <div>
+    <div class="grid">
         <div class="main_content">
                 <h2>This is the website of <a href="about.html">Guro Handeland</a>
                 <br>Her stuff. What she has done in different forms and ways.
