--- a/where.html
+++ b/where.html
@@ -22,10 +22,12 @@
             </nav>
         </div>
     </header>
-    <div class="where">
-        <h2>Oslo, Oslo |<b>||</b>| <i>21.08.2023</i></h3>
-    </div>
+    <div class="grid"> 
+        <div class="where">
+            <h2>Oslo, Oslo |<b>||</b>| <i>21.08.2023</i></h3>
+        </div>
     <canvas class="whitespace" id="ws_where"></canvas>
+    </div>
 
     <footer>
         <div class="some">
