photos slideshow bettered

--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <!--Set the viewport in order to make the site responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All the lines caught</title>
-    <script src="js/slideshow.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Me - Guro Handeland</title>
+    <link rel="stylesheet" href="../css/styles.css"> </link>
+    <script src="../js/header.js"></script>
 </head>
 
 <body>
@@ -37,15 +37,15 @@
             <div id="draw_slideshow1">
                 <div class="fs_slides">
                     <div class="numbertext">1/6</div>
-                    <img class="slide_img" src="images/foodsigns/fsdrawn1.jpeg"/>
+                    <img class="slide_img" src="../images/foodsigns/fsdrawn1.jpeg"/>
                 </div>
                 <div class="fs_slides">
                     <div class="numbertext">2/6</div>
-                    <img class="slide_img" src="images/foodsigns/fsdrawn2.jpeg" />
+                    <img class="slide_img" src="../images/foodsigns/fsdrawn2.jpeg" />
                 </div>
                 <div class="fs_slides">
                     <div class="numbertext">3/6</div>
-                    <img class="slide_img" src="images/foodsigns/fsdrawn3.jpeg" />
+                    <img class="slide_img" src="../images/foodsigns/fsdrawn3.jpeg" />
                 </div>
                 <div class="fs_slides">
                     <div class="numbertext">4/6</div>
@@ -53,11 +53,11 @@
                 </div>
                 <div class="fs_slides">
                     <div class="numbertext">5/6</div>
-                    <img class="slide_img" src="images/foodsigns/fsdrawn5.jpeg" />
+                    <img class="slide_img" src="../images/foodsigns/fsdrawn5.jpeg" />
                 </div>
                 <div class="fs_slides">
                     <div class="numbertext">6/6</div>
-                    <img class="slide_img" src="images/foodsigns/fsdrawn6.jpeg" />
+                    <img class="slide_img" src="../images/foodsigns/fsdrawn6.jpeg" />
                 </div>
 
                 <!-- &#10094/94 er piler :) -->
@@ -78,15 +78,15 @@
             <div id="draw_slideshow2">
                 <div class="i&e_slides">
                     <div class="numbertext">1/3</div>
-                    <img class="slide_img" src="images/i&e/pencil.jpeg" />
+                    <img class="slide_img" src="../images/i&e/pencil.jpeg" />
                 </div>
                 <div class="i&e_slides">
                     <div class="numbertext">2/3</div>
-                    <img class="slide_img" src="images/i&e/digital.jpeg" />
+                    <img class="slide_img" src="../images/i&e/digital.jpeg" />
                 </div>
                 <div class="i&e_slides">
                     <div class="numbertext">2/3</div>
-                    <img class="slide_img" src="images/i&e/digital.jpeg" />
+                    <img class="slide_img" src="../images/i&e/digital.jpeg" />
                 </div>
     
                 <!-- &#10094/94 er piler :) Husk at plusSlides ma oke no pa neste ss kall-->
@@ -105,19 +105,19 @@
                 <div id="draw_slideshow2">
                     <div class="hindo_slides">
                         <div class="numbertext">1/4</div>
-                        <img class="slide_img" src="images/hindo/ArcticEspresso.jpg" />
+                        <img class="slide_img" src="../images/hindo/ArcticEspresso.jpg" />
                     </div>
                     <div class="hindo_slides">
                         <div class="numbertext">2/4</div>
-                        <img class="slide_img" src="images/hindo/Colombia.jpg" />
+                        <img class="slide_img" src="../images/hindo/Colombia.jpg" />
                     </div>
                     <div class="hindo_slides">
                         <div class="numbertext">3/4</div>
-                        <img class="slide_img" src="images/hindo/Brasil.jpg" />
+                        <img class="slide_img" src="../images/hindo/Brasil.jpg" />
                     </div>
                     <div class="hindo_slides">
                         <div class="numbertext">4/4</div>
-                        <img class="slide_img" src="images/hindo/Etiopia.jpg" />
+                        <img class="slide_img" src="../images/hindo/Etiopia.jpg" />
                     </div>
         
                     <!-- &#10094/94 er piler :)-->
