--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,8 @@
             <!--Set the viewport in order to make the site responsive-->
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Me - Guro Handeland</title>
-        <link rel="stylesheet" href="css/styles.css"></link>
-        <script src="js/header.js"></script>
+        <link rel="stylesheet" href="../css/styles.css"></link>
+        <script src="../js/header.js"></script>
     </head>
     <body>
         <header class="my_header">
