--- a/pages/where.html
+++ b/pages/where.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <!--Set the viewport in order to make the site responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>You can reach me</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Me - Guro Handeland</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    </link>
+    <script src="../js/header.js"></script>
 </head>
 
 <body>
