--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -26,109 +26,80 @@
         <div>
             <h2>Drawings</h2>
             <p>I draw when I feel overwhelmed by life. Usually I write a text on the side, as it helps me sort out thoughts and worries.</p>
-            <p>I run a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.</p>
+            <p>I ran a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.</p>
             <p>I have also found drawing useful in my work as a cafemanager.</p>
         </div>
-
-        <canvas></canvas>
-        <div>
-            <div class="img_slideshow_container">
-            <h3>Digital Mousepad Food Signs</h3>
-            <div id="draw_slideshow1">
+        <hr class="little_whitespace" id="ws_photo">
+        </hr>
+        <h3>Digital Mousepad Food Signs</h3>
+        <h4>Catch essence in simplicity. The goal was to draw attention to the drinks and coffees we sold at <a
+                href="https://www.trevarefabrikken.no/">Trevarefabrikken</a>.</h4>
+        <small><i>08.2022</i></small>
+        <div class="img_slideshow_container" id="draw_slideshow1">
                 <div class="fs_slides">
-                    <div class="numbertext">1/6</div>
-                    <img class="slide_img" src="../images/foodsigns/fsdrawn1.jpeg"/>
+                    <p class="numbertext">1/6</p>
+                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn1.jpeg"/>
                 </div>
                 <div class="fs_slides">
-                    <div class="numbertext">2/6</div>
-                    <img class="slide_img" src="../images/foodsigns/fsdrawn2.jpeg" />
+                    <p class="numbertext">2/6</p>
+                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn2.jpeg" />
                 </div>
                 <div class="fs_slides">
                     <div class="numbertext">3/6</div>
-                    <img class="slide_img" src="../images/foodsigns/fsdrawn3.jpeg" />
+                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn3.jpeg" />
                 </div>
                 <div class="fs_slides">
-                    <div class="numbertext">4/6</div>
-                    <img class="slide_img" src="images/foodsigns/fsdrawn4.jpeg" />
+                    <p class="numbertext">4/6</p>
+                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn4.jpeg" />
                 </div>
                 <div class="fs_slides">
-                    <div class="numbertext">5/6</div>
-                    <img class="slide_img" src="../images/foodsigns/fsdrawn5.jpeg" />
+                    <p class="numbertext">5/6</p>
+                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn5.jpeg" />
                 </div>
                 <div class="fs_slides">
-                    <div class="numbertext">6/6</div>
-                    <img class="slide_img" src="../images/foodsigns/fsdrawn6.jpeg" />
+                    <p class="numbertext">6/6</p>
+                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn6.jpeg" />
                 </div>
-
-                <!-- &#10094/94 er piler :) -->
-                    <h3><a class="prev" onclick="plusSlides(-1, 0)">Previous</a></h3>
-                    <h3><a class="next" onclick="plusSlides(1, 0)">Next</a></h3>
-            </div>
-                <h4>Catch essence in simplicity. The goal with these was to draw attention to the drinks and coffees we sold at <a
-                        href="https://www.trevarefabrikken.no/">Trevarefabrikken</a>.</h4>
-                <small><i>08.2022</i></small>
-
-            </div>
         </div>
-                <hr class="little_whitespace" id="ws_photo">
-    </hr>
-    <div>
-        <div class="img_slideshow_container">
-            <h3>Hoping Right Hands</h3>
-            <div id="draw_slideshow2">
-                <div class="i&e_slides">
-                    <div class="numbertext">1/3</div>
-                    <img class="slide_img" src="../images/i&e/pencil.jpeg" />
-                </div>
-                <div class="i&e_slides">
-                    <div class="numbertext">2/3</div>
-                    <img class="slide_img" src="../images/i&e/digital.jpeg" />
-                </div>
-                <div class="i&e_slides">
-                    <div class="numbertext">2/3</div>
-                    <img class="slide_img" src="../images/i&e/digital.jpeg" />
-                </div>
-    
-                <!-- &#10094/94 er piler :) Husk at plusSlides ma oke no pa neste ss kall-->
-                <h3><a class="prev" onclick="plusSlides(-1, 1)">Previous</a></h3>
-                <h3><a class="next" onclick="plusSlides(1, 1)">Next</a></h3>
-            </div>
-            <h4>As a gift for their wedding day, I made these hands for my sister and now brother in law. It is now an A1 print on their living room wall.</h4> 
-            <small><i>14.05.2022</i></small>
-        </div>
-    </div>
     <hr class="little_whitespace" id="ws_photo">
     </hr>
-        <div>
-            <div class="img_slideshow_container">
-                <h3>Coffee</h3>
-                <div id="draw_slideshow2">
-                    <div class="hindo_slides">
-                        <div class="numbertext">1/4</div>
-                        <img class="slide_img" src="../images/hindo/ArcticEspresso.jpg" />
-                    </div>
-                    <div class="hindo_slides">
-                        <div class="numbertext">2/4</div>
-                        <img class="slide_img" src="../images/hindo/Colombia.jpg" />
-                    </div>
-                    <div class="hindo_slides">
-                        <div class="numbertext">3/4</div>
-                        <img class="slide_img" src="../images/hindo/Brasil.jpg" />
-                    </div>
-                    <div class="hindo_slides">
-                        <div class="numbertext">4/4</div>
-                        <img class="slide_img" src="../images/hindo/Etiopia.jpg" />
-                    </div>
-        
-                    <!-- &#10094/94 er piler :)-->
-                    <h3><a class="prev" onclick="pluisSlides(-1, 2)">Previous</a></h3>
-                    <h3><a class="next" onclick="plusSlides(1, 2)">Next</a></h3>
+    <h3>Hoping Right Hands</h3>
+    <h4>I made these hands for my sister and now brother in law as a gift for their wedding day. It is now an A1 print on their living room wall.</h4> 
+    <small><i>14.05.2022</i></small>
+        <div class="img_slideshow_container" id="draw_slideshow2">
+                <div class="i&e_slides">
+                    <p class="numbertext">1/3</p>
+                    <img onclick="plusSlides(-1, 1)" class="slide_img" src="../images/i&e/pencil.jpeg" />
                 </div>
-                <h4>These ae inspired by the origin countries of the coffee beans, and the nature around Henningsvær. Made to give attention to the coffee we sold at <a
-                        href="https://www.trevarefabrikken.no/">Trevarefabrikken</a>. In cooperation with <a href="https://hindokaffe.no/" target="_blank">Hindø Kaffebrenneri</a></h4>
-                <small><i>06.2022</i></small>
+                <div class="i&e_slides">
+                    <div class="numbertext">2/3</div>
+                    <img onclick="plusSlides(-1, 1)" class="slide_img" src="../images/i&e/digital.jpeg" />
+                </div>
+         </div>
+    <hr class="little_whitespace" id="ws_photo">
+    </hr>
+    <h3>Coffee</h3>
+    <h4>These ae inspired by the origin countries of the coffee beans, and the nature around Henningsvær. Made to give attention to the coffee we sold at <a
+            href="https://www.trevarefabrikken.no/">Trevarefabrikken</a>. In cooperation with <a href="https://hindokaffe.no/" target="_blank">Hindø Kaffebrenneri</a></h4>
+    <small><i>06.2022</i></small>
+            <div class="img_slideshow_container" id="draw_slideshow3">
+                    <div class="hindo_slides">
+                        <p class="numbertext">1/4</p>
+                        <img onClick="plusSlides(-1, 2)" class="slide_img" src="../images/hindo/ArcticEspresso.jpg" />
+                    </div>
+                    <div class="hindo_slides">
+                        <p class="numbertext">2/4</p>
+                        <img onClick="plusSlides(-1, 2)" class="slide_img" src="../images/hindo/Colombia.jpg" />
+                    </div>
+                    <div class="hindo_slides">
+                        <p class="numbertext">3/4</p>
+                        <img onClick="plusSlides(-1, 2)" class="slide_img" src="../images/hindo/Brasil.jpg" />
+                    </div>
+                    <div class="hindo_slides">
+                        <p class="numbertext">4/4</p>
+                        <img onClick="plusSlides(-1, 2)" class="slide_img" src="../images/hindo/Etiopia.jpg" />
+                    </div>
             </div>
-        </div>
 
         <canvas class="whitespace"></canvas>
     </div>
